fix: Realign total count of post in sidebar meta from right to left because it is covered by right widget btn on right side of the view when view size is mobile

--- a/_sass/defaults/_sidebar.scss
+++ b/_sass/defaults/_sidebar.scss
@@ -73,7 +73,7 @@
     ul {
       margin: 0;
       padding: 0;
-      text-align: right;
+      // text-align: right;
       li {
         list-style-type: none;
         &:last-of-type {
